feat: create seed weapons, stages, rules and show them
